85% do Footer concluído, falta responsivo

--- a/index.html
+++ b/index.html
@@ -51,6 +51,36 @@
 			</section>
 		</main>
 		<footer>
+			<section class="containerFooter">
+				<div class="containerFooter__Icone">
+					<img class="containerFooter__Icone__img" src="assets/logowhite.png">
+					<p>Quer contribuir</p>
+					<p>com esta missão?</p>
+				</div>
+			</section>
+			<section class="containerFooterContatos">
+				<div class="containerFooterContatos__icoetxt">
+					<img class="containerFooterContatos__img" src="assets/celphone.png">
+					<p class="containerFooterContatos__txt">(21)97461-7740</p>
+				</div>
+				<div class="containerFooterContatos__icoetxt">
+					<img class="containerFooterContatos__img" src="assets/instagram.png">
+					<p class="containerFooterContatos__txt">forloveoficial</p>
+				</div>
+				<div class="containerFooterContatos__icoetxt">				
+					<img class="containerFooterContatos__img" src="assets/facebook.png">
+					<p class="containerFooterContatos__txt">forloveporamor</p>
+				</div>
+			</section>
+				<div class="containerFooter_FOTOS">
+					<img class="containerFooter_FOTO_one" src="assets/img_one_footer.png">		
+					<img class="containerFooter_FOTO_two" src="assets/img_two_footer.png">
+				</div>
+			</section>
 		</footer>
+		<section class="containerFooter_BASE">
+			<p class="containerFooter_BASE_authorship">Desenvolvido por</p>
+			<img class="containerFooter_BASE_logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
+		</section>		
 	</body>
 </html>
