terminando de desenvolver responsivo da main

--- a/index.html
+++ b/index.html
@@ -8,36 +8,37 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-			
+		<header>	
 		</header>
 		<main>
-			<section class="containerLove">
-				<div class="containerLove__blockfirst">
-					<img class="containerLove__img" src="assets/casal.png">
+			<section class="containerlove">
+				<div class="containerlove__blockfirst">
+					<img class="containerlove__img" src="assets/casal.png">
 				</div>
-				<div class="containerLove__blocksecond">
-					<p class="containerLove__paragrafo">A FOR LOVE é um negócio social criado para formar e empregar pessoas em situação de vulnerabilidade social na comunidade de Jardim Catarina, em São Gonçalo</p><br>
-					<p class="containerLove__paragrafo">100% do lucro é reinvestido para capacitação, remuneração e ampliação de melhorias de infraestrutura para funcionários e sustento da organização. </p>
-				</div>
-			</section>
-			<section class="containerObjetivos">
-				<div class="containerObjetivos__blockfirst">
-					<img class="containerObjetivos__photos"src="assets/img1.png">
-					<img class="containerObjetivos__photos"src="assets/img2.png">
-					<img class="containerObjetivos__photos"src="assets/img3.png">					
-				</div>
-				<div class="containerObjetivos__blocksecond">
-					<h1 class="containerObjetivos__title">OBJETIVOS DO DESENVOLVIMENTO SUSTENTÁVEL - ONU</h1>
-					<img class="containerObjetivos__table" src="assets/global.png">
+				<div class="containerlove__blocksecond">
+					<p class="containerlove__paragrafo">A FOR LOVE é um negócio social criado para formar e empregar pessoas em situação de vulnerabilidade social na comunidade de Jardim Catarina, em São Gonçalo</p><br>
+					<p class="containerlove__paragrafo">100% do lucro é reinvestido para capacitação, remuneração e ampliação de melhorias de infraestrutura para funcionários e sustento da organização. </p>
 				</div>
 			</section>
-			<section class="containerProdutos">
-				<div class="containerProdutos__blockfirst">
-					<img class="containerProdutos__img" src="assets/tshirt.png">
+			<section class="containerobjetivos">
+				<div class="containerobjetivos__blockfirst">
+					<img class="containerobjetivos__photos"src="assets/img1.png">
+					<img class="containerobjetivos__photos"src="assets/img2.png">
+					<img class="containerobjetivos__photos"src="assets/img3.png">					
 				</div>
-				<div class="containerProdutos__blockList">
-					<p class="containerProdutos__paragrafo">Traga sua arte ou solicite sua arte no nosso estúdio</p>
+				<div class="containerobjetivos__blocksecond">
+					<h1 class="containerobjetivos__title">OBJETIVOS DO DESENVOLVIMENTO SUSTENTÁVEL - ONU</h1>
+					<img class="containerobjetivos__table" src="assets/global.png">
+				</div>
+			</section>
+			<section class="containerprodutos">
+				<div class="containerprodutos__blockfirst">
+					<img class="containerprodutos__img" src="assets/tshirt.png">
+				</div>
+				<div class="containerprodutos__blocksecond">
+					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite sua arte personalizada ao nosso estúdio</p>
+				</div>
+				<div class="containerprodutos__blocklist">
 					<ul>
 						<li>Caneca</li>
 						<li>Long drink</li>
@@ -47,7 +48,7 @@
 						<li>Sacolas</li>
 						<li>Outros...</li>
 					</ul>
-				</div>
+				</div>	
 			</section>
 		</main>
 		<footer>
