comecei o responsivo, falta acertar detalhes

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
 		</main>
 		<footer>
 			<section class="containerFooter">
-				<div class="containerFooter__Icone">
+				<div class="containerFooter__icone">
 					<img class="containerFooter__Icone__img" src="assets/logowhite.png">
-					<p>Quer contribuir</p>
-					<p>com esta missão?</p>
+					<p class="containerFooter__texto">Quer contribuir com</p>
+					<p class="containerFooter__texto">esta missão?</p>
 				</div>
 			</section>
 			<section class="containerFooterContatos">
@@ -76,11 +76,10 @@
 					<img class="containerFooter_FOTO_one" src="assets/img_one_footer.png">		
 					<img class="containerFooter_FOTO_two" src="assets/img_two_footer.png">
 				</div>
-			</section>
 		</footer>
 		<section class="containerFooter_BASE">
 			<p class="containerFooter_BASE_authorship">Desenvolvido por</p>
 			<img class="containerFooter_BASE_logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
-		</section>		
+		</section>
 	</body>
 </html>
