refiz o html e o css, falta alinhar no footer e acertar responsivo

--- a/index.html
+++ b/index.html
@@ -52,30 +52,30 @@
 		</main>
 		<footer>
 			<section class="containerFooter">
-				<div class="containerFooter__icone">
+				<div class="containerFooter__FOR LOVE">
 					<img class="containerFooter__Icone__img" src="assets/logowhite.png">
-					<p class="containerFooter__texto">Quer contribuir com</p>
-					<p class="containerFooter__texto">esta missão?</p>
+					<p class="containerFooter__texto-1">Quer contribuir com</p>
+					<p class="containerFooter__texto-2">esta missão?</p>
 				</div>
-			</section>
-			<section class="containerFooterContatos">
-				<div class="containerFooterContatos__icoetxt-01">
-					<img class="containerFooterContatos__img" src="assets/celphone.png">
-					<p class="containerFooterContatos__txt-01">(21) 97461-7740</p>
+				<div class="containerFooter__CONTATOS">
+					<div class="containerFooterContatos__icoetxt-01">
+						<img class="containerFooterContatos__img-1" src="assets/celphone.png">
+						<p class="containerFooterContatos__txt-01">(21) 97461-7740</p>
+					</div>
+					<div class="containerFooterContatos__icoetxt-02">
+						<img class="containerFooterContatos__img-2" src="assets/instagram.png">
+						<p class="containerFooterContatos__txt-02">forloveoficial</p>
+					</div>
+					<div class="containerFooterContatos__icoetxt-03">				
+						<img class="containerFooterContatos__img-3" src="assets/facebook.png">
+						<p class="containerFooterContatos__txt-03">forloveporamor</p>
+					</div>
 				</div>
-				<div class="containerFooterContatos__icoetxt-02">
-					<img class="containerFooterContatos__img" src="assets/instagram.png">
-					<p class="containerFooterContatos__txt-02">forloveoficial</p>
-				</div>
-				<div class="containerFooterContatos__icoetxt-03">				
-					<img class="containerFooterContatos__img" src="assets/facebook.png">
-					<p class="containerFooterContatos__txt-03">forloveporamor</p>
-				</div>
-			</section>
 				<div class="containerFooter_FOTOS">
-					<img class="containerFooter_FOTO_one" src="assets/img_one_footer.png">		
+					<img class="containerFooter_FOTO_one" src="assets/img_one_footer.png">	
 					<img class="containerFooter_FOTO_two" src="assets/img_two_footer.png">
 				</div>
+			</section>
 		</footer>
 		<section class="containerFooter_BASE">
 			<p class="containerFooter_BASE_authorship">Desenvolvido por</p>
