--- a/index.html
+++ b/index.html
@@ -8,30 +8,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet">
 	</head>
 	<body>
-		<header>	
-		</header>
-		<main>
-			<section class="containerlove">
-				<div class="containerlove__blockfirst">
-					<img class="containerlove__img" src="assets/casal.png">
-				</div>
-				<div class="containerlove__blocksecond">
-					<p class="containerlove__paragrafo">A FOR LOVE é um negócio social criado para formar e empregar pessoas em situação de vulnerabilidade social na comunidade de Jardim Catarina, em São Gonçalo</p><br>
-					<p class="containerlove__paragrafo">100% do lucro é reinvestido para capacitação, remuneração e ampliação de melhorias de infraestrutura para funcionários e sustento da organização. </p>
-				</div>
-			</section>
-			<section class="containerobjetivos">
-				<div class="containerobjetivos__blockfirst">
-					<img class="containerobjetivos__photos"src="assets/img1.png">
-					<img class="containerobjetivos__photos"src="assets/img2.png">
-					<img class="containerobjetivos__photos"src="assets/img3.png">					
-				</div>
-				<div class="containerobjetivos__blocksecond">
-					<h1 class="containerobjetivos__title">OBJETIVOS DO DESENVOLVIMENTO SUSTENTÁVEL - ONU</h1>
-					<img class="containerobjetivos__table" src="assets/global.png">
-				</div>
-			</section>
-			<section class="containerprodutos">
+		<section class="containerprodutos">
 				<div class="containerprodutos__blockfirst">
 					<img class="containerprodutos__img" src="assets/tshirt.png">
 				</div>
@@ -40,6 +17,7 @@
 				</div>
 				<div class="containerprodutos__blocklist">
 					<ul>
+						<li>Caneca</li>
 						<li>Caneca</li>
 						<li>Long drink</li>
 						<li>Chinelo</li>
