--- a/index.html
+++ b/index.html
@@ -37,16 +37,14 @@
 				</div>
 				<div class="containerprodutos__blocksecond">
 					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite sua arte personalizada ao nosso estúdio</p>
-				</div>
-				<div class="containerprodutos__blocklist">
-					<ul>
-						<li>Caneca</li>
-						<li>Long drink</li>
-						<li>Chinelo</li>
-						<li>Azulejo</li>
-						<li>Camiseta</li>
-						<li>Sacolas</li>
-						<li>Outros...</li>
+					<ul class="blocknoorder">
+						<li class="blocklist">Caneca</li>
+						<li class="blocklist">Long drink</li>
+						<li class="blocklist">Chinelo</li>
+						<li class="blocklist">Azulejo</li>
+						<li class="blocklist">Camiseta</li>
+						<li class="blocklist">Sacolas</li>
+						<li class="blocklist">Outros...</li>
 					</ul>
 				</div>	
 			</section>
