--- a/index.html
+++ b/index.html
@@ -8,78 +8,34 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet">
 	</head>
 	<body>
-		<header>
-			
-		</header>
-		<main>
-			<section class="containerLove">
-				<div class="containerLove__blockfirst">
-					<img class="containerLove__img" src="assets/casal.png">
+		<footer class="containerfooter">
+			<div class="containerfooter__forlove">
+				<img class="containerfooter__icone__img" src="assets/logowhite.png">
+				<p class="containerfooter__texto-1">Quer contribuir com</p>
+				<p class="containerfooter__texto-2">esta missão?</p>
+			</div>
+			<div class="containerfooter__contatos">
+				<div class="containerfooterContatos__icoetxt-01">
+					<img class="containerfooterContatos__img-1" src="assets/celphone.png">
+					<p class="containerfooterContatos__txt-01">(21) 97461-7740</p>
 				</div>
-				<div class="containerLove__blocksecond">
-					<p class="containerLove__paragrafo">A FOR LOVE é um negócio social criado para formar e empregar pessoas em situação de vulnerabilidade social na comunidade de Jardim Catarina, em São Gonçalo</p><br>
-					<p class="containerLove__paragrafo">100% do lucro é reinvestido para capacitação, remuneração e ampliação de melhorias de infraestrutura para funcionários e sustento da organização. </p>
+				<div class="containerfooterContatos__icoetxt-02">
+					<img class="containerfooterContatos__img-2" src="assets/instagram.png">
+					<p class="containerfooterContatos__txt-02">forloveoficial</p>
 				</div>
-			</section>
-			<section class="containerObjetivos">
-				<div class="containerObjetivos__blockfirst">
-					<img class="containerObjetivos__photos"src="assets/img1.png">
-					<img class="containerObjetivos__photos"src="assets/img2.png">
-					<img class="containerObjetivos__photos"src="assets/img3.png">					
+				<div class="containerfooterContatos__icoetxt-03">				
+					<img class="containerfooterContatos__img-3" src="assets/facebook.png">
+					<p class="containerfooterContatos__txt-03">forloveporamor</p>
 				</div>
-				<div class="containerObjetivos__blocksecond">
-					<h1 class="containerObjetivos__title">OBJETIVOS DO DESENVOLVIMENTO SUSTENTÁVEL - ONU</h1>
-					<img class="containerObjetivos__table" src="assets/global.png">
-				</div>
-			</section>
-			<section class="containerProdutos">
-				<div class="containerProdutos__blockfirst">
-					<img class="containerProdutos__img" src="assets/tshirt.png">
-				</div>
-				<div class="containerProdutos__blockList">
-					<p class="containerProdutos__paragrafo">Traga sua arte ou solicite sua arte no nosso estúdio</p>
-					<ul>
-						<li>Caneca</li>
-						<li>Long drink</li>
-						<li>Chinelo</li>
-						<li>Azulejo</li>
-						<li>Camiseta</li>
-						<li>Sacolas</li>
-						<li>Outros...</li>
-					</ul>
-				</div>
-			</section>
-		</main>
-		<footer>
-			<section class="containerFooter">
-				<div class="containerFooter__FOR LOVE">
-					<img class="containerFooter__Icone__img" src="assets/logowhite.png">
-					<p class="containerFooter__texto-1">Quer contribuir com</p>
-					<p class="containerFooter__texto-2">esta missão?</p>
-				</div>
-				<div class="containerFooter__CONTATOS">
-					<div class="containerFooterContatos__icoetxt-01">
-						<img class="containerFooterContatos__img-1" src="assets/celphone.png">
-						<p class="containerFooterContatos__txt-01">(21) 97461-7740</p>
-					</div>
-					<div class="containerFooterContatos__icoetxt-02">
-						<img class="containerFooterContatos__img-2" src="assets/instagram.png">
-						<p class="containerFooterContatos__txt-02">forloveoficial</p>
-					</div>
-					<div class="containerFooterContatos__icoetxt-03">				
-						<img class="containerFooterContatos__img-3" src="assets/facebook.png">
-						<p class="containerFooterContatos__txt-03">forloveporamor</p>
-					</div>
-				</div>
-				<div class="containerFooter_FOTOS">
-					<img class="containerFooter_FOTO_one" src="assets/img_one_footer.png">	
-					<img class="containerFooter_FOTO_two" src="assets/img_two_footer.png">
-				</div>
-			</section>
+			</div>
+			<div class="containerfooter__fotos">
+				<img class="containerfooter__foto__one" src="assets/img_one_footer.png">	
+				<img class="containerfooter__foto__two" src="assets/img_two_footer.png">
+			</div>
 		</footer>
-		<section class="containerFooter_BASE">
-			<p class="containerFooter_BASE_authorship">Desenvolvido por</p>
-			<img class="containerFooter_BASE_logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
+		<section class="containerfooter__base">
+			<p class="containerfooter_base__authorship">Desenvolvido por</p>
+			<img class="containerfooter__base__logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
 		</section>
 	</body>
 </html>
