site concluido com header e main no responsivo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet">
 	</head>
 	<body>
-		<header>	
+		<header>
+			<div class="containerHeader__blockone">
+				<img src="assets/logored.png" class="containerHeader__logo">
+				<nav class="containerHeader__menu">
+					<a href="" class="containerHeader__menuLink">Sobre</a>
+					<a href="" class="containerHeader__menuLink">Serviços</a>
+					<a href="" class="containerHeader__menuLink">Contato</a>
+				</nav>
+			</div>
+				<section class="containerHeader__principal">
+					<p class="containerHeader__text">sua camisa vira ação social</p>
+					<img src="assets/girlaquarela.png" class="containerHeader__photo">
+				</section>
 		</header>
+
 		<main>
 			<section class="containerlove">
 				<div class="containerlove__blockfirst">
@@ -36,7 +49,7 @@
 					<img class="containerprodutos__img" src="assets/tshirt.png">
 				</div>
 				<div class="containerprodutos__blocksecond">
-					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite sua arte personalizada ao nosso estúdio</p>
+					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite uma arte personalizada ao nosso estúdio</p>
 					<ul class="blocknoorder">
 						<li class="blocklist">Caneca</li>
 						<li class="blocklist">Long drink</li>
@@ -49,7 +62,5 @@
 				</div>	
 			</section>
 		</main>
-		<footer>
-		</footer>
 	</body>
 </html>
