projeto Footer 100% concluído hoje 16 mai 2019 quinta feira

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700,800" rel="stylesheet">
 	</head>
 	<body>
-		<footer class="containerfooter">
+		<footer>
+		<div class="containerfooter">
 			<div class="containerfooter__forlove">
 				<img class="containerfooter__icone__img" src="assets/logowhite.png">
-				<p class="containerfooter__texto-1">Quer contribuir com</p>
-				<p class="containerfooter__texto-2">esta missão?</p>
+				<p class="containerfooter__texto">Quer contribuir com esta missão?</p>
 			</div>
 			<div class="containerfooter__contatos">
 				<div class="containerfooterContatos__icoetxt-01">
@@ -32,10 +32,11 @@
 				<img class="containerfooter__foto__one" src="assets/img_one_footer.png">	
 				<img class="containerfooter__foto__two" src="assets/img_two_footer.png">
 			</div>
-		</footer>
-		<section class="containerfooter__base">
+		</div>
+		<div class="containerfooter__base">
 			<p class="containerfooter_base__authorship">Desenvolvido por</p>
 			<img class="containerfooter__base__logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
-		</section>
+		</div>
+	</footer>
 	</body>
 </html>
