responsivos da header, main e footer concluido dia 16 de maio por Yanca

--- a/index.html
+++ b/index.html
@@ -49,18 +49,42 @@
 					<img class="containerprodutos__img" src="assets/tshirt.png">
 				</div>
 				<div class="containerprodutos__blocksecond">
-					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite uma arte personalizada ao nosso estúdio</p>
-					<ul class="blocknoorder">
-						<li class="blocklist">Caneca</li>
-						<li class="blocklist">Long drink</li>
-						<li class="blocklist">Chinelo</li>
-						<li class="blocklist">Azulejo</li>
-						<li class="blocklist">Camiseta</li>
-						<li class="blocklist">Sacolas</li>
-						<li class="blocklist">Outros...</li>
-					</ul>
+					<p class="containerprodutos__paragrafo">Traga sua arte ou solicite</p>
+					<p class="containerprodutos__paragrafo">uma arte personalizada ao</p>
+					<p class="containerprodutos__paragrafo">nosso estúdio</p>
+					<p class="containerprodutos__list">Caneca</p>
+					<p class="containerprodutos__list">Long drink</p>
+					<p class="containerprodutos__list">Chinelo</p>
+					<p class="containerprodutos__list">Azulejo</p>
+					<p class="containerprodutos__list">Camiseta</p>
+					<p class="containerprodutos__list">Sacolas</p>
+					<p class="containerprodutos__list">Outros...</p>
 				</div>	
 			</section>
 		</main>
+		<footer>
+			<section class="containerFooter">
+				<div class="containerFooter__missao">
+					<img src="assets/logowhite.png">
+					<p class="containerFooter__paragrafo">Quer contribuir com essa missão?</p>
+				</div>
+				<div class="containerFooter__contacts">
+					<div class="containerFooter__network">
+						<img class="containerFooter__networkLogo" src="assets/celphone.png"><p class="blockListNetwork">(21) 97461-7740</p>
+					</div>
+					<div class="containerFooter__network">	
+						<img class="containerFooter__networkLogo" src="assets/instagram.png"><p class="blockListNetwork">forloveoficial</p>
+					</div>
+					<div class="containerFooter__network">	
+						<img class="containerFooter__networkLogo" src="assets/facebook.png"><p class="blockListNetwork">forloveporamor</p>
+					</div>	
+				</div>
+				<div class="containerFooter__photo">
+					<img class="containerFooter__img" src="assets/img_one_footer.png">
+					<img class="containerFooter__imgtwo" src="assets/img_two_footer.png">
+				</div>
+			</section>
+			<p class="containerFooter__base"> Desenvolvido por <img class="containerFooter__baseLogo"src="assets/logo-vnw.svg"></p>
+		</footer>
 	</body>
 </html>
