Concluí 100% o Footer e o respectivo Responsivo, hoje, dia 17 de maio de 2019, sexta feira

--- a/index.html
+++ b/index.html
@@ -11,31 +11,31 @@
 		<footer>
 		<div class="containerfooter">
 			<div class="containerfooter__forlove">
-				<img class="containerfooter__icone__img" src="assets/logowhite.png">
+				<img class="containerfooter__icone__img" src="assets/logowhite.png" alt="logo for love">
 				<p class="containerfooter__texto">Quer contribuir com esta missão?</p>
 			</div>
 			<div class="containerfooter__contatos">
 				<div class="containerfooterContatos__icoetxt-01">
-					<img class="containerfooterContatos__img-1" src="assets/celphone.png">
+					<img class="containerfooterContatos__img-1" src="assets/celphone.png" alt="ícone telefone">
 					<p class="containerfooterContatos__txt-01">(21) 97461-7740</p>
 				</div>
 				<div class="containerfooterContatos__icoetxt-02">
-					<img class="containerfooterContatos__img-2" src="assets/instagram.png">
+					<img class="containerfooterContatos__img-2" src="assets/instagram.png" alt="ícone instagram">
 					<p class="containerfooterContatos__txt-02">forloveoficial</p>
 				</div>
 				<div class="containerfooterContatos__icoetxt-03">				
-					<img class="containerfooterContatos__img-3" src="assets/facebook.png">
+					<img class="containerfooterContatos__img-3" src="assets/facebook.png" alt="ícone facebook">
 					<p class="containerfooterContatos__txt-03">forloveporamor</p>
 				</div>
 			</div>
 			<div class="containerfooter__fotos">
-				<img class="containerfooter__foto__one" src="assets/img_one_footer.png">	
-				<img class="containerfooter__foto__two" src="assets/img_two_footer.png">
+				<img class="containerfooter__foto__one" src="assets/img_one_footer.png" alt="foto homem e mulher">	
+				<img class="containerfooter__foto__two" src="assets/img_two_footer.png" alt="foto homem e mulher">
 			</div>
 		</div>
 		<div class="containerfooter__base">
 			<p class="containerfooter_base__authorship">Desenvolvido por</p>
-			<img class="containerfooter__base__logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg">
+			<img class="containerfooter__base__logo" src="https://www.vainaweb.com.br/assets/Logo-VnW.svg" alt="logo VainaWeb">
 		</div>
 	</footer>
 	</body>
