projeto final concluido com flexbox e responsivo, feito por Yanca, Na…

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					<img class="containerfooter__icone__img" src="assets/logowhite.png" alt="logo for love">
 					<p class="containerfooter__texto">Quer contribuir com esta missão?</p>
 				</div>
-				<div class="containerfooter__contatos">
+				<div class="containerfooter__contatos" id="contatos">
 					<div class="containerfooterContatos__icoetxt-01">
 						<img class="containerfooterContatos__img-1" src="assets/celphone.png" alt="ícone telefone">
 						<p class="containerfooterContatos__txt-01">(21) 97461-7740</p>
